--- a/ETL_Mini_Project_MLe.ipynb
+++ b/ETL_Mini_Project_MLe.ipynb
@@ -233,7 +233,8 @@
     }
    ],
    "source": [
-    "# Get a brief summary of the crowdfunding_info DataFrame.\n"
+    "# Get a brief summary of the crowdfunding_info DataFrame.\n",
+    "crowdfunding_info_df.info()"
    ]
   },
   {
@@ -275,7 +276,8 @@
     }
    ],
    "source": [
-    "# Get the crowdfunding_info_df columns.\n"
+    "# Get the crowdfunding_info_df columns.\n",
+    "crowdfunding_info_df.columns"
    ]
   },
   {
@@ -464,7 +466,9 @@
     }
    ],
    "source": [
-    "# Assign the category and subcategory values to category and subcategory columns.\n"
+    "# Assign the category and subcategory values to category and subcategory columns.\n",
+    "crowdfunding_info_df[['category','subcategory']] = crowdfunding_info_df[\"category & sub-category\"].str.split('/', n=2, expand=True)\n",
+    "crowdfunding_info_df.head()"
    ]
   },
   {
@@ -488,7 +492,8 @@
    ],
    "source": [
     "# Get the unique categories and subcategories in separate lists.\n",
-    "\n",
+    "categories = crowdfunding_info_df[\"category\"].unique()\n",
+    "subcategories = crowdfunding_info_df[\"subcategory\"].unique()\n",
     "\n",
     "print(categories)\n",
     "print(subcategories)"
@@ -553,9 +558,10 @@
    ],
    "source": [
     "# Use a list comprehension to add \"cat\" to each category_id. \n",
+    "cat_ids = [f\"cat{category_id}\" for category_id in category_ids]\n",
     "\n",
     "# Use a list comprehension to add \"subcat\" to each subcategory_id.    \n",
-    "\n",
+    "scat_ids = [f\"subcat{scat_id}\" for scat_id in subcategory_ids]\n",
     "    \n",
     "print(cat_ids)\n",
     "print(scat_ids)"
@@ -568,8 +574,12 @@
    "outputs": [],
    "source": [
     "# Create a category DataFrame with the category_id array as the category_id and categories list as the category name.\n",
+    "cat_array = {\"category_id\": cat_ids,\"category\": categories}\n",
+    "category_df = pd.DataFrame(cat_array)\n",
     "\n",
-    "# Create a category DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. \n"
+    "# Create a category DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. \n",
+    "subcat_array = {\"subcategory_id\": scat_ids,\"subcategory\": subcategories}\n",
+    "subcategory_df = pd.DataFrame(subcat_array)"
    ]
   },
   {
@@ -1099,7 +1109,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1282,7 +1294,26 @@
     }
    ],
    "source": [
-    "# Rename the blurb, launched_at, and deadline columns.\n"
+    "# Rename the blurb, launched_at, and deadline columns.\n",
+    "campaign_df.rename(columns={'cf_id': \"cf_id\",\n",
+    "                            'contact_id': \"contact_id\",\n",
+    "                            'company_name': \"company_name\",\n",
+    "                            'blurb': \"description\",\n",
+    "                            'goal': \"goal\",\n",
+    "                            'pledged': \"pledged\",\n",
+    "                            'outcome': \"outcome\",\n",
+    "                            'backers_count': \"backers_count\",\n",
+    "                            'country': \"country\",\n",
+    "                            'currency': \"currency\",\n",
+    "                            'launched_at': \"launched_date\",\n",
+    "                            'deadline': \"end_date\",\n",
+    "                            'staff_pick': \"staff_pick\",\n",
+    "                            'spotlight': \"spotlight\",\n",
+    "                            'category & sub-category': \"category & sub-category\",\n",
+    "                            'category': \"category\",\n",
+    "                            'subcategory': \"subcategory\",\n",
+    "                           }, inplace=True)\n",
+    "campaign_df.head()"
    ]
   },
   {
@@ -1471,7 +1502,11 @@
     }
    ],
    "source": [
-    "# Convert the goal and pledged columns to a `float` data type.\n"
+    "# Convert the goal and pledged columns to a `float` data type.\n",
+    "campaign_df[\"goal\"] = campaign_df[\"goal\"].astype(\"float\")\n",
+    "campaign_df[\"pledged\"] = campaign_df[\"pledged\"].astype(\"float\")\n",
+    "\n",
+    "campaign_df.head()"
    ]
   },
   {
@@ -1508,7 +1543,8 @@
     }
    ],
    "source": [
-    "# Check the datatypes\n"
+    "# Check the datatypes\n",
+    "campaign_df.dtypes"
    ]
   },
   {
@@ -1698,7 +1734,11 @@
    ],
    "source": [
     "# Format the launched_date and end_date columns to datetime format\n",
-    "from datetime import datetime as dt\n"
+    "from datetime import datetime as dt\n",
+    "campaign_df[\"launched_date\"] = pd.to_datetime(campaign_df[\"launched_date\"], unit='s').dt.strftime('%Y-%m-%d') \n",
+    "campaign_df[\"end_date\"] = pd.to_datetime(campaign_df[\"end_date\"], unit='s').dt.strftime('%Y-%m-%d') \n",
+    "\n",
+    "campaign_df.head()"
    ]
   },
   {
@@ -2046,6 +2086,8 @@
     "# Merge the campaign_df with the category_df on the \"category\" column and \n",
     "# the subcategory_df on the \"subcategory\" column.\n",
     "\n",
+    "campaign_merged_df = campaign_df.merge(category_df, on='category', how='left').merge(subcategory_df, on='subcategory', how='left')\n",
+    "\n",
     "\n",
     "campaign_merged_df.tail(10)"
    ]
@@ -2218,7 +2260,11 @@
     }
    ],
    "source": [
-    "# Drop unwanted columns\n"
+    "# Drop unwanted columns\n",
+    "campaign_merged_df = campaign_merged_df.drop(['staff_pick','spotlight',\\\n",
+    "                    'category & sub-category','category','subcategory'],axis =1)\n",
+    "\n",
+    "campaign_merged_df.head()"
    ]
   },
   {
@@ -2228,7 +2274,7 @@
    "outputs": [],
    "source": [
     "# Export the DataFrame as a CSV file. \n",
-    "campaign_cleaned.to_csv(\"Resources/campaign.csv\", index=False)"
+    "campaign_cleaned = campaign_merged_df.to_csv(\"Resources/campaign.csv\", index=False)"
    ]
   },
   {
@@ -2240,7 +2286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2301,14 +2347,14 @@
        "4        {\"contact_id\": 2199, \"name\": \"Samuel Sorgatz\", \"email\": \"samuel.sorgatz@gmail.com\"}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Read the data into a Pandas DataFrame. Use the `header=2` parameter when reading in the data.\n",
-    "contact_info_df = pd.read_excel('Resources/contacts.xlsx', header=2)\n",
+    "# Read the data into a Pandas DataFrame. Use the `header=3` parameter when reading in the data.\n",
+    "contact_info_df = pd.read_excel('Resources/contacts.xlsx', header=3)\n",
     "contact_info_df.head()"
    ]
   },
@@ -2336,8 +2382,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "execution_count": 23,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2352,6 +2400,14 @@
     "import json\n",
     "dict_values = []\n",
     "\n",
+    "for i, row in contact_info_df.iterrows():\n",
+    "    data = row['contact_info']\n",
+    "    converted_data = json.loads(data)\n",
+    "    # Iterate through each dictionary (row) and get the values for each row using list comprehension.\n",
+    "    row_values = [v for k, v in converted_data.items()]\n",
+    "    # Append the list of values for each row to a list. \n",
+    "    dict_values.append(row_values)\n",
+    "\n",
     "\n",
     "# Print out the list of values for each row.\n",
     "print(dict_values)"
@@ -2359,7 +2415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2432,20 +2488,25 @@
        "4        2199     Samuel Sorgatz      samuel.sorgatz@gmail.com"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a contact_info DataFrame and add each list of values, i.e., each row \n",
-    "# to the 'contact_id', 'name', 'email' columns.\n"
+    "# to the 'contact_id', 'name', 'email' columns.\n",
+    "\n",
+    "contacts_df = pd.DataFrame(dict_values, columns=['contact_id', 'name', 'email'])\n",
+    "contacts_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
+   "execution_count": 25,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2465,12 +2526,13 @@
     }
    ],
    "source": [
-    "# Check the datatypes.\n"
+    "# Check the datatypes.\n",
+    "contacts_df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2589,23 +2651,26 @@
        "9        5468  danielle.ladeck@scalfaro.net   Danielle    Ladeck"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a \"first\"name\" and \"last_name\" column with the first and last names from the \"name\" column. \n",
-    "\n",
+    "contacts_df[[\"first_name\",\"last_name\"]] = contacts_df[\"name\"].str.split(' ', n=1, expand=True)\n",
     "\n",
     "# Drop the contact_name column\n",
-    "\n"
+    "contacts_df_clean = contacts_df.drop(['name'], axis=1)\n",
+    "contacts_df_clean.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
+   "execution_count": 27,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2723,18 +2788,20 @@
        "9        5468   Danielle    Ladeck  danielle.ladeck@scalfaro.net"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Reorder the columns\n"
+    "# Reorder the columns\n",
+    "contacts_df_clean = contacts_df_clean[[\"contact_id\", \"first_name\", \"last_name\", \"email\"]]\n",
+    "contacts_df_clean.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2756,12 +2823,13 @@
     }
    ],
    "source": [
-    "# Check the datatypes one more time before exporting as CSV file.\n"
+    "# Check the datatypes one more time before exporting as CSV file.\n",
+    "contacts_df_clean.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2778,8 +2846,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "execution_count": 30,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -2839,7 +2909,7 @@
        "4        {\"contact_id\": 2199, \"name\": \"Samuel Sorgatz\", \"email\": \"samuel.sorgatz@gmail.com\"}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2851,8 +2921,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
+   "execution_count": 31,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2925,19 +2997,23 @@
        "4       2199  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Extract the four-digit contact ID number.\n"
+    "# Extract the four-digit contact ID number.\n",
+    "contact_info_df_copy['contact_id'] = contact_info_df_copy['contact_info'].str.extract(r'contact_id\": (\\d{4})')\n",
+    "contact_info_df_copy.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
+   "execution_count": 32,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2956,13 +3032,16 @@
     }
    ],
    "source": [
-    "# Check the datatypes.\n"
+    "# Check the datatypes.\n",
+    "contact_info_df_copy.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
+   "execution_count": 33,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2981,13 +3060,17 @@
     }
    ],
    "source": [
-    "# Convert the \"contact_id\" column to an int64 data type.\n"
+    "# Convert the \"contact_id\" column to an int64 data type.\n",
+    "contact_info_df_copy['contact_id'] = contact_info_df_copy['contact_id'].astype('int64')\n",
+    "contact_info_df_copy.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
+   "execution_count": 34,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3106,19 +3189,23 @@
        "9        5468    Danielle Ladeck  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Extract the name of the contact and add it to a new column.\n"
+    "# Extract the name of the contact and add it to a new column.\n",
+    "contact_info_df_copy['name'] = contact_info_df_copy['contact_info'].str.extract(r'\"name\": \"([^\"]*)\"')\n",
+    "contact_info_df_copy.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
+   "execution_count": 35,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3248,19 +3335,23 @@
        "9        5468    Danielle Ladeck  danielle.ladeck@scalfaro.net  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Extract the email from the contacts and add the values to a new column.\n"
+    "# Extract the email from the contacts and add the values to a new column.\n",
+    "contact_info_df_copy['email'] = contact_info_df_copy['contact_info'].str.extract(r'\"email\": \"([^\"]*)\"')\n",
+    "contact_info_df_copy.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
+   "execution_count": 36,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3367,19 +3458,23 @@
        "9        5468    Danielle Ladeck  danielle.ladeck@scalfaro.net"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Create a copy of the contact_info_df with the 'contact_id', 'name', 'email' columns.\n"
+    "# Create a copy of the contact_info_df with the 'contact_id', 'name', 'email' columns.\n",
+    "contact_info_df_copy2 = contact_info_df_copy[['contact_id', 'name', 'email']].copy()\n",
+    "contact_info_df_copy2.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
+   "execution_count": 37,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3497,22 +3592,27 @@
        "9        5468  danielle.ladeck@scalfaro.net   Danielle    Ladeck"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Create a \"first\"name\" and \"last_name\" column with the first and last names from the \"name\" column. \n",
+    "contact_info_df_copy2[['first_name','last_name']] = contact_info_df_copy2['name'].str.split(' ', n=1, expand=True)\n",
     "\n",
+    "# Drop the contact_name column\n",
+    "contact_info_df_copy2 = contact_info_df_copy2.drop(['name'], axis=1)\n",
     "\n",
-    "# Drop the contact_name column\n"
+    "contact_info_df_copy2.head(10)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
+   "execution_count": 38,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3630,18 +3730,20 @@
        "9        5468   Danielle    Ladeck  danielle.ladeck@scalfaro.net"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Reorder the columns\n"
+    "# Reorder the columns\n",
+    "contact_info_df_copy2 = contact_info_df_copy2[[\"contact_id\", \"first_name\", \"last_name\", \"email\"]]\n",
+    "contact_info_df_copy2.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -3663,7 +3765,10 @@
     }
    ],
    "source": [
-    "# Check the datatypes one more time before exporting as CSV file.\n"
+    "# Check the datatypes one more time before exporting as CSV file.\n",
+    "contact_info_df_copy2['contact_id'] = contact_info_df_copy2['contact_id'].astype('int64')\n",
+    "\n",
+    "contact_info_df_copy2.info()"
    ]
   },
   {
@@ -3700,7 +3805,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
